--- a/public/css/Movie.module.css
+++ b/public/css/Movie.module.css
@@ -1,5 +1,118 @@
-.movieInfoPage {
-  width: 100%;
+.wrapper {
+  width: 75%;
   height: 100%;
-  background-color: black;
+}
+
+@media (max-width: 1440px) {
+  .wrapper {
+    width: 80%;
+  }
+}
+
+@media (max-width: 1280px) {
+  .wrapper {
+    width: 90%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .wrapper {
+    width: 98%;
+  }
+}
+
+@media (max-width: 979px) {
+  .wrapper {
+    width: 100%;
+  }
+}
+
+.movieInfoPage {
+  max-width: 100%;
+  min-height: 45.78125vmax;
+  background-size: 45.78125vmax;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.movieInfoPage .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.movieInfoPage .wrapper .loader__dark,
+.movieInfoPage .wrapper .loader__light,
+.movieInfoPage .wrapper .loader__dark:after,
+.movieInfoPage .wrapper .loader__light:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+
+.movieInfoPage .wrapper .loader__dark,
+.movieInfoPage .wrapper .loader__light {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 60px auto;
+  font-size: 10px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+
+.movieInfoPage .wrapper .loader__dark {
+  border-top: 1.1em solid rgba(173, 192, 255, 0.1);
+  border-right: 1.1em solid rgba(173, 192, 255, 0.1);
+  border-bottom: 1.1em solid rgba(173, 192, 255, 0.1);
+  border-left: 1.1em solid #adc0ff;
+}
+
+.movieInfoPage .wrapper .loader__light {
+  border-top: 1.1em solid rgba(78, 6, 24, 0.2);
+  border-right: 1.1em solid rgba(78, 6, 24, 0.2);
+  border-bottom: 1.1em solid rgba(78, 6, 24, 0.2);
+  border-left: 1.1em solid #4e0618;
+}
+
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
