--- a/public/css/MovieItem.module.css
+++ b/public/css/MovieItem.module.css
@@ -26,6 +26,24 @@
           transform: scale(1);
 }
 
+@media (max-width: 1440px) {
+  .movieCard a {
+    height: 17.1875vmax;
+  }
+}
+
+@media (max-width: 1280px) {
+  .movieCard a {
+    height: 20.83333vmax;
+  }
+}
+
+@media (max-width: 1024px) {
+  .movieCard a {
+    height: 26.04167vmax;
+  }
+}
+
 .movieCard a:hover {
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
@@ -48,7 +66,7 @@
   display: flex;
   -ms-flex-item-align: start;
       align-self: flex-start;
-  margin-left: 0.52083vmax;
+  padding: 0 0.625vmax;
   margin-top: 0.9375vmax;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -62,12 +80,64 @@
           align-items: flex-start;
   font-family: 'Source Sans Pro', sans-serif;
   line-height: 1.30208vmax;
+  width: 100%;
+}
+
+@media (max-width: 1600px) {
+  .movieCard .cardTextBlock__light, .movieCard .cardTextBlock__dark {
+    line-height: 1.5625vmax;
+  }
+}
+
+@media (max-width: 1440px) {
+  .movieCard .cardTextBlock__light, .movieCard .cardTextBlock__dark {
+    padding: 0 1.61458vmax;
+    line-height: 1.71875vmax;
+  }
+}
+
+@media (max-width: 1280px) {
+  .movieCard .cardTextBlock__light, .movieCard .cardTextBlock__dark {
+    padding: 0 4.16667vmax;
+    line-height: 1.92708vmax;
+  }
+}
+
+@media (max-width: 1024px) {
+  .movieCard .cardTextBlock__light, .movieCard .cardTextBlock__dark {
+    padding: 0 7.29167vmax;
+    line-height: 2.34375vmax;
+  }
 }
 
 .movieCard .cardTextBlock__light p:nth-child(1), .movieCard .cardTextBlock__dark p:nth-child(1) {
   font-size: 1.04167vmax;
   font-weight: bold;
   margin-bottom: 0.15625vmax;
+}
+
+@media (max-width: 1600px) {
+  .movieCard .cardTextBlock__light p:nth-child(1), .movieCard .cardTextBlock__dark p:nth-child(1) {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 1440px) {
+  .movieCard .cardTextBlock__light p:nth-child(1), .movieCard .cardTextBlock__dark p:nth-child(1) {
+    font-size: 1.14583vmax;
+  }
+}
+
+@media (max-width: 1280px) {
+  .movieCard .cardTextBlock__light p:nth-child(1), .movieCard .cardTextBlock__dark p:nth-child(1) {
+    font-size: 1.35417vmax;
+  }
+}
+
+@media (max-width: 1024px) {
+  .movieCard .cardTextBlock__light p:nth-child(1), .movieCard .cardTextBlock__dark p:nth-child(1) {
+    font-size: 16px;
+  }
 }
 
 .movieCard .cardTextBlock__light p:nth-child(1) span, .movieCard .cardTextBlock__dark p:nth-child(1) span {
@@ -77,7 +147,7 @@
 }
 
 .movieCard .cardTextBlock__light p:nth-child(2) span, .movieCard .cardTextBlock__dark p:nth-child(2) span {
-  margin-left: 0.26042vmax;
+  margin: 0.26042vmax;
 }
 
 .cardTextBlock__dark p:nth-child(1) span {
