--- a/public/css/MoviesList.module.css
+++ b/public/css/MoviesList.module.css
@@ -1,4 +1,48 @@
-ul {
+.wrapper {
+  width: 75%;
+  height: 100%;
+}
+
+@media (max-width: 1440px) {
+  .wrapper {
+    width: 80%;
+  }
+}
+
+@media (max-width: 1280px) {
+  .wrapper {
+    width: 90%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .wrapper {
+    width: 98%;
+  }
+}
+
+@media (max-width: 979px) {
+  .wrapper {
+    width: 100%;
+  }
+}
+
+.moviesBlock {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 2.60417vmax;
+  position: relative;
+}
+
+.moviesBlock ul {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[5];
@@ -8,4 +52,43 @@ ul {
   row-gap: 3.64583vmax;
   -webkit-column-gap: 3.64583vmax;
           column-gap: 3.64583vmax;
+}
+
+@media (max-width: 1440px) {
+  .moviesBlock ul {
+    -webkit-column-gap: 0.78125vmax;
+            column-gap: 0.78125vmax;
+  }
+}
+
+@media (max-width: 1280px) {
+  .moviesBlock ul {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+    -ms-grid-rows: (1fr)[4];
+        grid-template-rows: repeat(4, 1fr);
+    -webkit-column-gap: 0.52083vmax;
+            column-gap: 0.52083vmax;
+  }
+}
+
+@media (max-width: 1024px) {
+  .moviesBlock ul {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+    -webkit-column-gap: 0vmax;
+            column-gap: 0vmax;
+  }
+}
+
+.btnUp {
+  position: fixed;
+  top: 50%;
+  left: 80%;
+  width: 15.625vmax;
+  height: 15.625vmax;
+  background-color: white;
+  border: 1px solid black;
 }
