--- a/public/css/wrapper.css
+++ b/public/css/wrapper.css
@@ -1,4 +1,28 @@
 .wrapper {
-  width: 70%;
+  width: 75%;
   height: 100%;
+}
+
+@media (max-width: 1440px) {
+  .wrapper {
+    width: 80%;
+  }
+}
+
+@media (max-width: 1280px) {
+  .wrapper {
+    width: 90%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .wrapper {
+    width: 98%;
+  }
+}
+
+@media (max-width: 979px) {
+  .wrapper {
+    width: 100%;
+  }
 }
