--- a/src/components/MovieItem/MovieItem.module.scss
+++ b/src/components/MovieItem/MovieItem.module.scss
@@ -1,4 +1,5 @@
 @import '../../sass/mixins';
+@import '../../sass/media_mixin';
 
 .movieCard{
     user-select: none;
@@ -6,18 +7,24 @@
     flex-direction: column;
     align-items: center;
     color: white;
-
     a {
         position: relative;
         border-radius: vmax(6);
-        height: vmax(310); 
+        height: vmax(300); 
         transition: 0.3s ease;
         transform: scale(1.0);
+        @include _1440{ height: vmax(330); }
+        @include _1280{ height: vmax(400); }
+        @include _1024{ height: vmax(500); }
+        @include _979{ height: vmax(550); }
+        @include _768{ height: vmax(650); }
+        @include _600{ height: vmax(800); }
     }
 
     a:hover {
         transition: 0.3s ease;
         transform: scale(1.02);
+        box-shadow: 0 0 vmax(2) 0 black;
     }
     
     .movieImg{
@@ -26,22 +33,43 @@
         width: auto;
         object-fit: cover;
         border-radius: vmax(5);
+        animation: appear linear 1s;
     }     
 
+    @keyframes appear {
+        from {
+            opacity: 0;
+        } to {
+            opacity: 1;
+        }
+    }
+    
     .cardTextBlock__light, .cardTextBlock__dark {
         display: flex;
         align-self:flex-start;
-        margin-left: vmax(10);
+        padding: 0 vmax(12);
         margin-top: vmax(18);
         flex-direction: column;
         justify-content: left;
-        align-items: flex-start;
         font-family: 'Source Sans Pro', sans-serif;
         line-height: vmax(25);
+        width: 100%;
+        text-align: left;
+        @include _1600{ line-height: vmax(30); }
+        @include _1440{ padding: 0 vmax(31);  line-height: 1.3em;}
+        @include _1280{ padding: 0 vmax(80); line-height: 1.4em;}
+        @include _1024{ padding: 0 20%; line-height: 1.5em; margin-top: vmax(30);}
+        @include _768{ padding: 0 25%; line-height: 1.5em; margin-top: vmax(40);}
+        @include _600{ padding: 0 30%; line-height: 1.7em;}
         p:nth-child(1) {
             font-size: vmax(20);
             font-weight: bold;
             margin-bottom: vmax(3);
+            @include _1600{ font-size: 18px ;}
+            @include _1440{ font-size: vmax(22);}
+            @include _1280{ font-size: vmax(26)}
+            @include _1024{ font-size: 1.2em;}
+            @include _600{ font-size: 1.4em;}
             span{
                 font-size: vmax(18);
                 font-weight: inherit;
@@ -50,7 +78,7 @@
         }    
         p:nth-child(2) {
             span{
-                margin-left: vmax(5);
+                margin: vmax(5);
             }
         }
     }
@@ -85,8 +113,6 @@
         }
     }
 } 
-
-
 
 .noImage {
     height: 100%;
