--- a/src/components/MoviesCards/MoviesList.module.scss
+++ b/src/components/MoviesCards/MoviesList.module.scss
@@ -1,5 +1,6 @@
 @import '../../sass/mixins';
 @import '../../sass/wrapper.scss';
+@import '../../sass/media_mixin';
 
 .moviesBlock {
     width: 100%;
@@ -8,15 +9,39 @@
     align-items: center;
     padding-top: vmax(50);
     position: relative;
+    // @include _886 { width: 100vw;}
+    ul{
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        row-gap: vmax(70);
+        column-gap: vmax(70);
+        @include _1440{
+            column-gap: vmax(15);
+        }
+        @include _1280{
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(4, 1fr);
+            column-gap: vmax(10);
+        }
+        @include _1024{
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            column-gap: vmax(0);
+        }
+        @include _768{
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            row-gap: vmax(90);
+        }
+        @include _600{
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(1, 1fr);
+            row-gap: vmax(170);
+        }
+    }
 }
 
-ul{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    row-gap: vmax(70);
-    column-gap: vmax(70);
-}
 
 .btnUp {
     position: fixed;
