--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,12 @@
 @import './sass/mixins';
+@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@font-face {
+    font-family: 'Netflix Sans';
+    font-weight: 400;
+    font-display: optional;
+    src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff2) format('woff2'),url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff) format('woff')
+}
 
 *{
   margin:0;
@@ -10,6 +18,11 @@
   box-sizing:border-box;
   -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box;
+}
+
+html {
+  -webkit-text-size-adjust : 100%;
+  text-size-adjust: 100%;
 }
 
 html,
@@ -70,22 +83,31 @@ input::-webkit-search-cancel-button,
 input::-webkit-search-results-button,
 input::-webkit-search-results-decoration { display: none; }
 
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="number"],
+textarea {
+    -webkit-appearance : none;
+    -moz-appearance    : none;
+    -ms-appearance     : none;
+    appearance         : none;
+    outline            : 0;
+    box-shadow         : none;
+}
 
-// body::-webkit-scrollbar {
-//   width: 1em;
-//   // background-color: black;
-// }
- 
-// body::-webkit-scrollbar-track {
-//   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-// }
+.observer-element {
+  height: vmax(10);
+  background: transparent;
+}
 
-// body::-webkit-scrollbar-thumb {
-//   background: rgb(242,242,242);
-//   background: linear-gradient(90deg, rgba(242,242,242,1) 0%, rgba(245,245,242,1) 30%, rgba(198,198,198,1) 100%);
-//   outline: 1px solid black;
-//   border-radius: vmax(12)
-// }
+.blockScroll {
+  position: static;
+  overflow-y: hidden;
+}
+
+
+
 
 
 
