--- a/src/sass/wrapper.scss
+++ b/src/sass/wrapper.scss
@@ -1,4 +1,10 @@
+@import './media_mixin'; 
+
 .wrapper {
     width: 75%;
     height: 100%;
+    @include _1440 { width: 80%; }
+    @include _1280 { width: 90%; }
+    @include _1024 { width: 98%; }
+    @include _979 { width: 100%; }
 }
